--- a/lab3_report/Report/Lab3_report.tex
+++ b/lab3_report/Report/Lab3_report.tex
@@ -1,56 +1,3 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-% This file defines the style for your homebook
-% You don't need to edit it any more, if not to 
-% change the authors name:
-%
-% Search below for the keyword:   GROUP
-% insert your group number
-%
-% Search below for the keyword:   AUTHORS
-% insert the name of the authors
-%
-%%%%%%
-% Now to update the dexcription  of your work you will 
-% use the file ``master.tex'' in the current directory
-% following the instructions in it 
-%
-%%%%%% 
-%%%%%%  
-%%%%%%
-% If you want to compile your document you have TWO ways
-% depending on the fact that 
-% 	1) you have inserted only postcript images in your tex file 
-%		---> then go to MODE 1
-%	2) you have inserted other kind of images (jpg..) in your tec file
-%		---> then go to MODE 2
-%
-% MODE 1 
-%simple type:
-% 	latex homebook.tex
-%
-% If the compilation runs succesfully and you want to see the results type:
-% 	xdvi homebook.dvi &
-% and use the menus to go through the document
-%
-% If you want to create a pdf type:
-% 	dvipdfm homebook.dvi
-%
-% a homebook.pdf file is created
-% you can see it using the command:
-% 	acroread homebook.pdf &
-%
-%
-% MODE 2
-% simple type:
-%	pdflatex homebook.tex
-%
-% If the compilation runs succesfully you directly have the pdf file
-% and you can see it using the command:
-%       acroread homebook.pdf &
-%
-% 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[10pt,  english, makeidx, a4paper, titlepage, oneside]{book}
 \usepackage{babel}
 \usepackage{fancyhdr}
@@ -119,7 +66,7 @@
 \bigskip
 \centerline{\Large III Facolt\`a di Ingegneria}
 \vspace{4cm}
-\centerline{\Huge\sf Exercises and Homeworks for the course}
+\centerline{\Huge\sf Report Lab3}
 \bigskip
 \centerline{\Huge\bfseries\sf Integrated Systems Architecture}
 \vspace{2cm}
@@ -129,20 +76,19 @@
 % GROUP
 % Change the name of your group below
 %
-\centerline{\Large Authors: e02GQCxx}
+\centerline{\Large Authors: ISA01}
 \vspace{2cm}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % AUTHORS
 % Change the name of the Group participants here
 %
-\centerline{Paperoga, Gilberto de Pippis, Brigitta, Filo Sganga}
+\centerline{Boeckelen Daniel, Piran Michael, Semino Emanuele}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace{2cm}
 \centerline{\today}
 \vspace{1cm}
-{\scriptsize Many thanks to Prof. Mariagrazia Graziano for providing us with this template.}
 \end{titlepage}
 
 \tableofcontents
@@ -157,7 +103,11 @@
 %%    
 %% HERE IS THE MAIN INCLUSION
 %%
-\input{./Datapath}
+\input{./cap/cap1_Intro}
+\input{./cap/cap2_Datapath}
+\input{./cap/cap3_Control_unit}
+\input{./cap/cap4_Testbench}
+\input{./cap/cap5_Synt_Tim}
 %%
 %% NOW READ THE FILE master.tex  
 \end{document}
